--- a/group.html
+++ b/group.html
@@ -117,7 +117,7 @@ acura
 <div class="first-list">
   <img src="image/PHOTO-2024-03-11-10-13-59.jpg" class="investment-logo" alt="logo">
     <div>
-  <h4 class="list1">investment</h4>
+  <h4 class="list1">investmentt</h4>
   <p>Lorem ipsum dolor sius similique officiis ipsum autem repudiandae  provident maxime</p>
 </div> 
 
